# hw_goit_web_10

./: .env.example  pyproject.toml
quotes/quoteapp/: forms.py  models.py  urls.py  utils.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py
quotes/quoteapp/static/quoteapp/: bootstrap.css  style.css
quotes/quoteapp/templates/quoteapp/: base.html  index.html  tag.html
quotes/quoteapp/templatetags/: extract.py
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  models.py  urls.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/utils/: add_quotes_to_mongo.py  custom_migration.py
