[tool.poetry]
name = "hw-goit-web-10"
version = "0.1.0"
description = ""
authors = ["laushkin1 <laushkinivan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pymongo = "^4.5.0"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
